add some styling at file

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <td>Deletes the branch specified.</td>
             </tr>
             <tr>
-                <td>git clone</td>
+                <td>git clone https://</td>
                 <td>Creates a local copy of a remote.</td>
             </tr>
             <tr>
